--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Fucking Web Engineering</title>
+	<title>SocDev</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -85,7 +85,8 @@
       <input type="email" placeholder="Email Address" required/>
       <input type="tel" placeholder="Phone Number" required/>
       <textarea placeholder="Cirriculum" name="Cirriculum" rows="5" maxlength="250" style="width: 100%; border: 1px solid #d9d9d9;"></textarea>
-      <input type="file" accept=".xlsx,.xls,image/*,.doc, .docx,.ppt, .pptx,.txt,.pdf" />
+      <p>Upload Image</p>
+      <input type="file" accept="image/*" required />
       <select required>
       	  <option>Sex</option>
 		  <option value="male">Male</option>
