--- a/all-developers.html
+++ b/all-developers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Fucking Web Engineering</title>
+	<title>SocDev</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -154,7 +154,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 			
@@ -177,7 +177,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -200,7 +200,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -223,7 +223,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -246,7 +246,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -269,7 +269,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -292,7 +292,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -315,7 +315,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -338,7 +338,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -361,7 +361,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -384,7 +384,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 
@@ -407,7 +407,7 @@
 					</div>
 					<div class="developer_short_description"><span>I am in the TOP 5 out of 16,000,000+ Freelancers. I am super experienced web programmer who has successfully launched various huge projects and has proven my skill in many opportunity. I am the responsible for the working and try to keep the best relationship with the customers. My Vision : High Quality, High Speed,...</span>
 					</div>
-					<div class="hireme"><a href="#">Hire Me</a></div>
+					<div class="hireme"><a href="profile-page.html">Hire Me</a></div>
 				</div>
 			</div>
 		</div>
