--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Fucking Web Engineering</title>
+	<title>SocDev</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -116,7 +116,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -133,7 +133,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -150,7 +150,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -167,7 +167,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -184,7 +184,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -201,7 +201,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -218,7 +218,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -235,7 +235,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -252,7 +252,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -269,7 +269,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -286,7 +286,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -303,7 +303,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -320,7 +320,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -337,7 +337,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -354,7 +354,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -371,7 +371,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -388,7 +388,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -405,7 +405,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -422,7 +422,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -439,7 +439,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -456,7 +456,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -473,7 +473,7 @@
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
 								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
 							</ul>
-							<a href="#" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
+							<a href="profile-page.html" style="color: #fff; text-decoration: none; padding: 8px 16px; background-color: #00c6d7;">Read More</a>
 						</div>
 				</div>
             </div>
@@ -494,6 +494,7 @@
     <!-- #endregion Jssor Slider End -->
 		</div>
 	</div>
+	<h3><a href="all-developers.html" style="margin-top: 12px; color: #00C6D7; text-decoration: none;">Hire Developer...</a></h3>
 </section>
 
 
@@ -542,7 +543,7 @@
                				 	<div class="project_description">
                				 		<div class="des">
                				 			<h1>Name Of Project</h1>
-               				 			<a href="#">Read More</a>
+               				 			<a href="project-page-index.html" target="_blank">Read More</a>
                				 		</div>
                				 	</div>
                				 </div>
@@ -552,7 +553,7 @@
                				 	<div class="project_description">
                				 		<div class="des">
                				 			<h1>Name Of Project</h1>
-               				 			<a href="#">Read More</a>
+               				 			<a href="project-page-index.html">Read More</a>
                				 		</div>
                				 	</div>
                				 </div>
@@ -562,7 +563,7 @@
                				 	<div class="project_description">
                				 		<div class="des">
                				 			<h1>Name Of Project</h1>
-               				 			<a href="#">Read More</a>
+               				 			<a href="project-page-index.html">Read More</a>
                				 		</div>
                				 	</div>
                				 </div>
@@ -572,7 +573,7 @@
                				 	<div class="project_description">
                				 		<div class="des">
                				 			<h1>Name Of Project</h1>
-               				 			<a href="#">Read More</a>
+               				 			<a href="project-page-index.html">Read More</a>
                				 		</div>
                				 	</div>
                				 </div>
@@ -582,7 +583,7 @@
                				 	<div class="project_description">
                				 		<div class="des">
                				 			<h1>Name Of Project</h1>
-               				 			<a href="#">Read More</a>
+               				 			<a href="project-page-index.html">Read More</a>
                				 		</div>
                				 	</div>
                				 </div>
@@ -592,7 +593,7 @@
                				 	<div class="project_description">
                				 		<div class="des">
                				 			<h1>Name Of Project</h1>
-               				 			<a href="#">Read More</a>
+               				 			<a href="project-page-index.html">Read More</a>
                				 		</div>
                				 	</div>
                				 </div>
