--- a/login.html
+++ b/login.html
@@ -124,7 +124,7 @@
       <button>Register</button>
     </form>
   </div>
-  <div class="cta"><a href="#">Forgot your password?</a></div>
+  <div class="cta"><a href="recovery-page.html">Forgot your password?</a></div>
 </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
