--- a/recovery-page.html
+++ b/recovery-page.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/et-line-font.css">
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -65,15 +66,37 @@
 
 <div class="pen-title"></div>
 <!-- Recovery-->
-<form>
-  	<div class="form-group row" style="margin-left: 15px;">
-      	<div class="col-xs-3">
-        		<label for="ex2">Type your email</label>
-      			<input class="form-control" id="ex2" type="email" required placeholder="Email">
-      			<button type="submit" class="btn btn-default" style="margin-top: 11px;">Send</button>
-     		</div>   
-   	 </div>
- </form>
+ <div class="form-gap"></div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="text-center">
+                  <h3><i class="fa fa-lock fa-4x"></i></h3>
+                  <h2 class="text-center">Forgot Password?</h2>
+                  <p>You can reset your password here.</p>
+                  <div class="panel-body">
+                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
+    
+                      <div class="form-group">
+                        <div class="input-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                          <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
+                      </div>
+                      <input type="hidden" class="hide" name="token" id="token" value=""> 
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+	</div>
+</div>
 
     <script src="js/index.js"></script>
 
