--- a/user-profile-page.html
+++ b/user-profile-page.html
@@ -30,7 +30,7 @@
 				<li><a href="index.html" class="smoothScroll">HOME</a></li>
 				<li><a href="index.html#work" class="smoothScroll">DEVELOPERS</a></li>
 				<li><a href="index.html#portfolio" class="smoothScroll">PROJECTS</a></li>
-				<li><a href="login.html" class="smoothScroll">SIGN IN / SIGN UP</a></li>
+				<li><a href="login.html" class="smoothScroll">MY PROFILE</a></li>
 				<li><a href="about.html" class="smoothScroll">ABOUT</a></li>
 				<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
@@ -51,6 +51,9 @@
 					<div class="column">
 						<img src="images/profile-image.png" class="profile-image">
 							<a href="add-project.html" style="padding: 15px 10px;">Add project</a>
+								<button type="button" class="btn btn-default btn-sm">
+          						<span class="glyphicon glyphicon-log-out"></span> Log out
+       					   	    </button>
 							</div>
 							<div class="column">
 								<p style="margin-top: 15px;">Name:<span class="developer_name employer_name">Username</span></p>
