--- a/recovery-page.html
+++ b/recovery-page.html
@@ -86,7 +86,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
+                        <input name="recover-submit" class="btn btn-primary" value="Reset Password" type="submit">
                       </div>
                       <input type="hidden" class="hide" name="token" id="token" value=""> 
                     </form>
