--- a/add-project.html
+++ b/add-project.html
@@ -66,53 +66,79 @@
 <div class="pen-title"></div>
 <!-- Form Module-->
 <form>
-	<div class="col-sm-12">
-		<div class="col-md-4">
-			<div class="flex" style="margin-bottom: 11px;">
-				<p>Project Name:</p>
-				<input type="text" placeholder="Project Name" style="width: 310px;" required/>
+	<div class="container">
+		
+			<div class="form-group">
+     			 <label class="control-label col-sm-2">Project name:</label>
+    			 <div class="col-sm-10">
+        		 	<input type="name" class="form-control" placeholder="Enter name">
+      			 </div>
+   		    </div>
+   		    <div class="form-group">
+    			<label class="control-label col-sm-2" for="Textarea">Project description:</label>
+   					 <div class="col-sm-10">
+    					<textarea class="form-control" id="projectDescription" placeholder="Project description"></textarea>
+    				 </div>
+  			</div>
+  			<div class="form-group">
+				<label class="control-label col-sm-2">Upload photo:</label>
+					<div class="col-sm-10">
+						<input type="file" accept="image/*" style="border:1px solid grey; margin-top: 3px;" required />
+					</div>
 			</div>
-			<div class="flex">
-				<p>Description:&nbsp;&nbsp;&nbsp;</p>
-				<textarea class="form-control" placeholder="Message" rows="7" name="message" style="margin-bottom: 11px;"></textarea>
+			<!-- Start Task List -->
+			<div id="taskselections">
+<div class="input-group-task" id="selectionTask">
+<div class="form-group">
+				<label class="control-label col-sm-2">Task list:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" placeholder="Enter name">
+					<textarea class="form-control" id="tasktDescription" placeholder="Task description"></textarea>
+					<input type="date" class="form-control">
+				</div>
 			</div>
-			<div class="flex">
-				<p>Task:</p>
-				<input type="text" name="tasks" style="margin-left: 55px; width: 320px;">
+</div>
+</div>
+			<button class="btn btn-default" type="button">
+  Add new task
+	</button>
+			<div class="form-group">
+			<hr style="display: none;">
+			<label class="control-label col-sm-2">Add skills & level</label>
+				<div id="selections">
+		  			<div class="input-group" id="selection">
+		    			<span class="input-group-addon" style="display: none;"><i class="icon wb-menu" aria-hidden="true"></i></span>
+		   					<select class="show-tick" data-plugin="select2" id="select" style="margin-bottom: 15px; margin-top: 5px; margin-left: 15px;">
+							      <option>Skills</option>
+								  <option value="php">Php</option>
+								  <option value="html">Html</option>
+								  <option value="css">Css</option>
+								  <option value="java">Java</option>
+							</select>
+
+		     				<select class="show-tick" data-plugin="select2" id="select">
+							      <option>Level</option>
+								  <option value="one">1</option>
+								  <option value="two">2</option>
+								  <option value="three">3</option>
+								  <option value="four">4</option>
+								  <option value="five">5</option>
+								  <option value="six">6</option>
+								  <option value="seven">7</option>
+								  <option value="eight">8</option>
+								  <option value="nine">9</option>
+								  <option value="ten">10</option>
+							</select>
+		  			</div>
+				</div>
+				<button class="btn btn-primary" id="add_skill" type="button" style="border-radius: 0px;"> Add more skills</button>
 			</div>
-			<p>Upload Photo</p>
-			<input type="file" accept="image/*" style="margin-bottom: 15px; border:1px solid grey;" required />
-			<div id="selections" style="">
-		  <div class="input-group" id="selection">
-		    <span class="input-group-addon" style="display: none;">
-		    <i class="icon wb-menu" aria-hidden="true"></i>
-		     </span>
-		    <select class="show-tick" data-plugin="select2" id="select" style="margin-bottom: 15px;">
-		       <option>Skills</option>
-			  <option value="php">Php</option>
-			  <option value="html">Html</option>
-			  <option value="css">Css</option>
-			  <option value="java">Java</option>
-		    </select>
-		     <select class="show-tick" data-plugin="select2" id="select">
-		      <option>Level</option>
-			  <option value="one">1</option>
-			  <option value="two">2</option>
-			  <option value="three">3</option>
-			  <option value="four">4</option>
-			  <option value="five">5</option>
-			  <option value="six">6</option>
-			  <option value="seven">7</option>
-			  <option value="eight">8</option>
-			  <option value="nine">9</option>
-			  <option value="ten">10</option>
-		    </select>
-		  </div>
+			<div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default btn-lg btn-block">Submit</button>
+      </div>
+    </div>
 	</div>
-		<button class="btn btn-primary" id="add_skill" type="button" style="border-radius: 0px;"> Add more skills</button>
-		</div>
-	</div>
-	<button type="button" class="btn btn-default" style="margin-left: 25px;">Add project</button>
 </form>
 
 
@@ -152,6 +178,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="js/login.js"></script>
 <script src="js/clonedivs.js"></script>
+<script src="js/clonetaskdiv.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 </body>
