--- a/user-profile-page.html
+++ b/user-profile-page.html
@@ -50,7 +50,8 @@
 					<div class="col-sm-12 profile-header">
 					<div class="column">
 						<img src="images/profile-image.png" class="profile-image">
-							<a href="add-project.html" style="padding: 15px 10px;">Add project</a>
+							<a href="add-project.html" style="margin-left: 10px;">Add project</a>
+							<a href="edit-profile.html" style="padding: 15px 10px;">Edit profile</a>
 								<button type="button" class="btn btn-default btn-sm">
           						<span class="glyphicon glyphicon-log-out"></span> Log out
        					   	    </button>
