--- a/add-project.html
+++ b/add-project.html
@@ -75,11 +75,39 @@
       			 </div>
    		    </div>
    		    <div class="form-group">
+     			<label class="control-label col-sm-2">Project category:</label>
+    			<div class="col-sm-10">
+        		 	<select class="selectpicker form-control">
+        		 		<option>Choose category</option>
+  						<option>HTML</option>
+						<option>CSS</option>
+					    <option>PHP</option>
+					</select>
+      			</div>
+   		    </div>
+   		    <div class="form-group">
+     			 <label class="control-label col-sm-2">Invite developer:</label>
+    			 <div class="col-sm-10">
+        		 	<input type="name" class="form-control" placeholder="Invite developer">
+      			 </div>
+   		    </div>
+   		    <div class="form-group">
     			<label class="control-label col-sm-2" for="Textarea">Project description:</label>
    					 <div class="col-sm-10">
     					<textarea class="form-control" id="projectDescription" placeholder="Project description"></textarea>
     				 </div>
   			</div>
+  			<div class="form-group">
+     			 <label class="control-label col-sm-2">Status:</label>
+    			 <div class="col-sm-10">
+        		 	<select class="selectpicker form-control">
+        		 		<option>Choose status</option>
+  						<option>Open</option>
+						<option>Precess</option>
+					    <option>Closed</option>
+					</select>
+      			 </div>
+   		    </div>
   			<div class="form-group">
 				<label class="control-label col-sm-2">Upload photo:</label>
 					<div class="col-sm-10">
@@ -88,20 +116,18 @@
 			</div>
 			<!-- Start Task List -->
 			<div id="taskselections">
-<div class="input-group-task" id="selectionTask">
-<div class="form-group">
-				<label class="control-label col-sm-2">Task list:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" placeholder="Enter name">
-					<textarea class="form-control" id="tasktDescription" placeholder="Task description"></textarea>
-					<input type="date" class="form-control">
+				<div class="input-group-task" id="selectionTask">
+				<div class="form-group">
+					<label class="control-label col-sm-2">Task list:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" placeholder="Enter name">
+						<textarea class="form-control" id="tasktDescription" placeholder="Task description"></textarea>
+						<input type="date" class="form-control">
+					</div>
+				</div>
 				</div>
 			</div>
-</div>
-</div>
-			<button class="btn btn-default" type="button">
-  Add new task
-	</button>
+			<button class="btn btn-default" type="button">Add new task</button>
 			<div class="form-group">
 			<hr style="display: none;">
 			<label class="control-label col-sm-2">Add skills & level</label>
