--- a/project-page.html
+++ b/project-page.html
@@ -82,6 +82,7 @@ The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for t
 
 The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
 				</div>
+				<a href="edit-project.html">Edit project>></a>
 				<div class="container bootstrap snippet">
 				    <div class="row">
 						<div class="col-md-12">
