--- a/user-profile-page.html
+++ b/user-profile-page.html
@@ -82,16 +82,100 @@
 
 					  <div class="tab-content">
 					    <div id="coordinator-invitation" class="tab-pane fade in active">
-					      <h3>Invitation of coordinator</h3>
-					      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					      <h3>Invited developers</h3>
+					    	<table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Developer Name</th>
+	                    			<th>Project Name</th>
+	                       			<th>Delete</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td><a href="user-profile-page.html" style="color: #666666; font-style: italic;">Developer 1</a></td>
+										<td><a href="project-page.html" style="color: #666666;">Project 1</a></td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+ 									<tr>
+									    <td><a href="user-profile-page.html" style="color: #666666; font-style: italic;">Developer 2</a></td>
+									    <td><a href="project-page.html" style="color: #666666;">Project 2</a></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+									    <td><a href="user-profile-page.html" style="color: #666666; font-style: italic;">Developer 3</a></td>
+									    <td><a href="project-page.html" style="color: #666666;">Project 3</a></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+										<td><a href="user-profile-page.html" style="color: #666666; font-style: italic;">Developer 4</a></td>
+									    <td><a href="project-page.html" style="color: #666666;">Project 4</a></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+									   <td><a href="user-profile-page.html" style="color: #666666; font-style: italic;">Developer 5</a></td>
+									   <td><a href="project-page.html" style="color: #666666;">Project 5</a></td>
+									   <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+								</tbody>
+							</table>
 					    </div>
 					    <div id="app-coordinator" class="tab-pane fade">
 					      <h3>App Coordinator</h3>
-					      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					      <a href="project-page.html"><p class="red">Project name</p></a>
+					      <a href="project-page.html"><p class="red">Project name</p></a>
+					      <a href="project-page.html"><p class="red">Project name</p></a>
+					      <a href="project-page.html"><p class="red">Project name</p></a>
+					      <a href="project-page.html"><p class="red">Project name</p></a>
 					    </div>
 					    <div id="proposal-developer" class="tab-pane fade">
-					      <h3>Developer poposal</h3>
-					      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+					      <h3>Developer proposal</h3>
+					    	<table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Project Name</th>
+	                    			<th>Project Coordinator</th>
+	                   				<th>Project Link</th>
+	                      			<th>Accept</th>
+	                       			<th>Delete</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td>Project 1</td>
+										<td>Coordinator 1</td>
+										<td><a href="project-page.html" style="color: red;">Link</a></td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-ok"></span></button></p></td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+ 									<tr>
+									    <td>Project 2</td>
+									    <td>Coordinator 2</td>
+									    <td><a href="project-page.html" style="color: red;">Link</a></td>
+
+									    <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-ok"></span></button></p></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+									    <td>Project 3</td>
+									    <td>Coordinator 3</td>
+									    <td><a href="project-page.html" style="color: red;">Link</a></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-ok"></span></button></p></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+										<td>Project 4</td>
+									    <td>Coordinator 4</td>
+									    <td><a href="project-page.html" style="color: red;">Link</a></td>
+
+									    <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-ok"></span></button></p></td>
+									    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+									   <td>Project 5</td>
+									   <td>Coordinator 5</td>
+									   <td><a href="project-page.html" style="color: red;">Link</a></td>
+									   <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-ok"></span></button></p></td>
+									   <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+								</tbody>
+							</table>
 					    </div>
 					    <div id="offers-developer" class="tab-pane fade">
 					      <h3>Offers developer</h3>
