--- a/user-profile-page.html
+++ b/user-profile-page.html
@@ -120,11 +120,40 @@
 					    </div>
 					    <div id="app-coordinator" class="tab-pane fade">
 					      <h3>App Coordinator</h3>
-					      <a href="project-page.html"><p class="red">Project name</p></a>
-					      <a href="project-page.html"><p class="red">Project name</p></a>
-					      <a href="project-page.html"><p class="red">Project name</p></a>
-					      <a href="project-page.html"><p class="red">Project name</p></a>
-					      <a href="project-page.html"><p class="red">Project name</p></a>
+					    	<table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Project Name</th>
+	                    			<th>Status</th>
+	                       			<th>Delete</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td><a href="project-page.html" style="color: #666666; font-style: italic;">Project 1</a></td>
+										<td>Open</td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+ 									<tr>
+										<td><a href="project-page.html" style="color: #666666; font-style: italic;">Project 2</a></td>
+										<td>Closed</td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+										<td><a href="project-page.html" style="color: #666666; font-style: italic;">Project 3</a></td>
+										<td>Process</td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+										<td><a href="project-page.html" style="color: #666666; font-style: italic;">Project 4</a></td>
+										<td>Closed</td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+									<tr>
+										<td><a href="project-page.html" style="color: #666666; font-style: italic;">Project 5</a></td>
+										<td>Open</td>
+										<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+									</tr>
+								</tbody>
+							</table>
 					    </div>
 					    <div id="proposal-developer" class="tab-pane fade">
 					      <h3>Developer proposal</h3>
