--- a/profile-page.html
+++ b/profile-page.html
@@ -73,62 +73,64 @@
 					<div class="col-sm-12 profile-header">
 					<div class="column">
 						<img src="images/profile-image.png" class="profile-image">
-							</div>
-							<div class="column">
-								<p style="margin-top: 15px;">Name:<span class="developer_name employer_name">Username</span></p>
-								<p>Email:<span>Email@gmail.com</span></p>
-								<p>Phone:<span>+39 39 39 39 39</span></p>
-								<p>Sex:<span>Male/Female</span></p>
-								<p>Skill:<span>Html</span></p>
-								<p>Level:<span>8</span></p>
-							</div>
-							<div class="column">
-								<p>About me</p>
-								<p style="font-style: italic;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-							</div>
+						<button type="button" class="btn btn-secondary btn-sm" style="font-size: 18px;">Hire Me</button>
+					</div>
+					<div class="column">
+						<p style="margin-top: 15px;">Name:<span class="developer_name employer_name">Username</span></p>
+						<p>Email:<span>Email@gmail.com</span></p>
+						<p>Phone:<span>+39 39 39 39 39</span></p>
+						<p>Sex:<span>Male/Female</span></p>
+						<p>Skill:<span>Html</span></p>
+						<p>Level:<span>8</span></p>
+					</div>
+					<div class="column">
+						<p>About me</p>
+						<p style="font-style: italic;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+					</div>
 					</div>
 					<hr>
 				</div>
 							<div class="smallwrap"></div>
+
 				    <table class="table table-hover">
 					    <thead>
 					      <tr>
 					        <th>Skills</th>
 					        <th>Projects</th>
-					        <th>Invitations</th>
+					        <!-- <th>Invitations</th>
 					        <th>Proposal</th>
 					        <th>Applications</th>
-					        <th>Offers</th>
+					        <th>Offers</th> -->
 					      </tr>
 					    </thead>
 					    <tbody>
 					      <tr>
 					        <td>Skill</td>
-					        <td><a href="#">Project Name</a></td>
-					        <td><a href="#">Invitation</a></td>
+					        <td><a href="project-page.html">Project Name</a></td>
+					        <!-- <td><a href="#">Invitation</a></td>
 					        <td><a href="#">Proposal</a></td>
 					        <td><a href="#">Application</a></td>
-					        <td><a href="#">Offers</a></td>
+					        <td><a href="#">Offers</a></td> -->
 					      </tr>
 					      <tr>
 					        <td>Skill</td>
-					        <td><a href="#">Project Name</a></td>
-					        <td><a href="#">Invitation</a></td>
+					        <td><a href="project-page.html">Project Name</a></td>
+					        <!-- <td><a href="#">Invitation</a></td>
 					        <td><a href="#">Proposal</a></td>
 					        <td><a href="#">Application</a></td>
-					        <td><a href="#">Offers</a></td>
+					        <td><a href="#">Offers</a></td> -->
 					      </tr>
 					      <tr>
 					        <td>Skill</td>
-					        <td><a href="#">Project Name</a></td>
-					        <td><a href="#">Invitation</a></td>
+					        <td><a href="project-page.html">Project Name</a></td>
+					        <!-- <td><a href="#">Invitation</a></td>
 					        <td><a href="#">Proposal</a></td>
 					        <td><a href="#">Application</a></td>
-					        <td><a href="#">Offers</a></td>
+					        <td><a href="#">Offers</a></td> -->
 					      </tr>
 					    </tbody>
 				    </table>
-				    <div class="profile-header"><h1>TASKS</h1></div>
+				    <!-- <div class="profile-header"><h1>TASKS</h1></div>
 				    <table class="table table-hover">
 					    <thead>
 					      <tr>
@@ -162,7 +164,7 @@
 					        <td><a href="#">Offers</a></td>
 					      </tr>
 					    </tbody>
-				    </table>
+				    </table> -->
 			</div>
 		</div>
 	</div>
