--- a/project-page.html
+++ b/project-page.html
@@ -76,13 +76,124 @@
 					</div>
 				</div>
 				<div class="col-sm-12" style="border:2px solid grey;box-shadow: 1px 1px 3px #888888; margin-top: 35px;">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 				</div>
 				<a href="edit-project.html">Edit project>></a>
+				<ul class="nav nav-tabs bold">
+    					<li class="active"><a data-toggle="tab" href="#task-list">Task List</a></li>
+    					<li><a data-toggle="tab" href="#task-description">Task Description</a></li>
+					    <li><a data-toggle="tab" href="#task-date">Task Date</a></li>
+					    <li><a data-toggle="tab" href="#task-skill">Skill/Level</a></li>
+  					</ul>
+
+					  <div class="tab-content">
+					    <div id="task-list" class="tab-pane fade in active">
+					      <h3>Invited developers</h3>
+					    	<table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Task List</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td>Task name 1</td>
+									</tr>
+ 									<tr>
+									    <td>Task name 2</td>
+									</tr>
+									<tr>
+									    <td>Task name 3</td>
+									</tr>
+									<tr>
+										<td>Task name 4</td>
+									</tr>
+									<tr>
+									   <td>Task name 5</td>
+									</tr>
+								</tbody>
+							</table>
+					    </div>
+					    <div id="task-description" class="tab-pane fade">
+					      <h3>App Coordinator</h3>
+					    	<table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Task Description</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td>Task DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask Descr</td>
+									</tr>
+ 									<tr>
+									    <td>Task DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask Descr</td>
+									</tr>
+									<tr>
+									    <td>Task DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask Descr</td>
+									</tr>
+									<tr>
+										<td>Task DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask Descr</td>
+									</tr>
+									<tr>
+									   <td>Task DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask DescriptionTask Descr</td>
+									</tr>
+								</tbody>
+							</table>
+					    </div>
+					    <div id="task-date" class="tab-pane fade">
+					      <h3>Developer proposal</h3>
+					    	<table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Task Date</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td>Date 1</td>
+									</tr>
+ 									<tr>
+									    <td>Date 2</td>
+									</tr>
+									<tr>
+									    <td>Date 3</td>
+									</tr>
+									<tr>
+										<td>Date 4</td>
+									</tr>
+									<tr>
+									   <td>Date 5</td>
+									</tr>
+								</tbody>
+							</table>
+					    </div>
+					    <div id="task-skill" class="tab-pane fade">
+					      <h3>Offers developer</h3>
+					      <table id="mytable" class="table table-bordred table-striped">
+                   		    	<thead>
+	                   		    	<th>Skill</th>
+	                   		    	<th>Level</th>
+                   				</thead>
+    							<tbody>
+    								<tr>
+										<td>Skill</td>
+										<td>Level</td>
+									</tr>
+ 									<tr>
+									    <td>Skill</td>
+										<td>Level</td>
+									</tr>
+									<tr>
+									    <td>Skill</td>
+										<td>Level</td>
+									</tr>
+									<tr>
+										<td>Skill</td>
+										<td>Level</td>
+									</tr>
+									<tr>
+									   <td>Skill</td>
+									   <td>Level</td>
+									</tr>
+								</tbody>
+							</table>
+					    </div>
+					  </div>
 				<div class="container bootstrap snippet">
 				    <div class="row">
 						<div class="col-md-12">
